# xyz2mol_b

./: .gitignore  README.md  README.org  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  tox.ini  xyz2mol_b.py  xyz2mol_b_source.org
.github/: dependabot.yml
.github/workflows/: build_wheel.yml  pytest.yml  tox.yml
src/xyz2mol_b/: __init__.py
test_structures/: acetate.xyz  isopropylbenzene_cation.xyz  propylbenzene.xyz  stereogenic_centre.xyz
tests/: C9H11.xyz  NMe4_cation.xyz  ethane.xyz  tbab_cation.xyz  test_xyz2mol_b.py
xyz2mol_b/: __init__.py
